2020-June-07 Struan Robertson

		* CollisionOperator.cpp: Change to SetMaximumCellEnergy method to account for variable
		cell size.

2020-May-31 Struan Robertson

		* MesmerILT.cpp: Bug fixes for issues relating to the used of extended ILT with Marquardt 
		fitting.

		* Documentation update.

2020-May-10 Struan Robertson

		* Reaction.h/.cpp and derived reaction classes: Delegate the reading of second order 
		excess concentration to the relevant classes.

2020-May-10 Struan Robertson

		* main.cpp, System.cpp: Version updated to 6.1.

2020-May-03 Struan Robertson

		* FourierGrid1D.cpp, gStructure.h/.cpp: Fix for inversion projection from Hessian bug.

2020-April-23 Struan Robertson

		* Reaction.h, ExchangeReaction.h/.cpp: Tunnelling term added to bimolecular exchange 
		reaction.

		* PseudoIsomerizationReaction.cpp: Fixed bug related to reservoir state.

2020-April-21 Struan Robertson

		* Reaction.h, all reaction classes, AnalyticalRepresentation.cpp, System.cpp: Method 
		"normalizeRateCoefficient" altered to use a reference and made pure virtual to prevent 
		implementation assumptions. This method remains a null operation for unimolecular reactions.

2020-April-19 Struan Robertson

		* ThermodynamicTable.cpp: Add check for undeclared transition states.

		* PriorDistribtuion.cpp: Improved output for of prior distribution to .test file.

2020-April-13 Struan Robertson

		* Reaction.h, AssociationReaction.cpp, SecondOrderAssocReaction.cpp, ExchangeReaction.cpp,
		AnalyticalRepresentation.cpp: Update of methods for normalizing pseudo first order reactions
		to second order reactions.

		* CollisionOperator.cpp: Check that initial distribution is properly normalized.

		* Baseline update.

2020-April-04 Struan Robertson

		* EckartCoefficients.cpp: Revised code to reflect change in Schema.

		* Schema update.

		* Documentation update.

		* Win32 baseline update.

2020-March-29 Struan Robertson
