@@ -30,13 +30,13 @@ namespace mesmer
     virtual const char* getID()  { return m_id; }
     virtual DefinedTunnelingCoefficients* Clone() { return new DefinedTunnelingCoefficients(*this); }
 
+    // Read tunnelling coefficients. Called from Reaction.cpp ~line 274 via ParseForPlugin
+    // and store in member variables. 
+    virtual bool ParseData(PersistPtr pp);
 
     virtual bool calculateCellTunnelingCoeffs(Reaction* pReact, std::vector<double>& TunnelingProbability);
 
   private:
-    // Read potential barrier details. Called from Reaction.cpp ~line 274 via ParseForPlugin
-    // and store in member variables. 
-    virtual bool ParseData(PersistPtr pp);
 
     const char* m_id;
     vector<double> m_Energy;
