@@ -1,3 +1,8 @@
+2020-July-18 Struan Robertson
+
+		* System.cpp: Fix for missing grain partition functions in output - calculate MaxGrn on 
+		input.
+
 2020-June-07 Struan Robertson
 
 		* CollisionOperator.cpp: Change to SetMaximumCellEnergy method to account for variable
